Closed Bug 411854 Opened 17 years ago Closed 17 years ago

directory list should use localized ellipsis

Categories

(Core :: Internationalization, defect)

defect
Not set
minor

Tracking

()

VERIFIED FIXED

People

(Reporter: masa141421356, Assigned: masa141421356)

References

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3pre) Gecko/2008011005 Minefield/3.0b3pre Build Identifier: spun off from Bug 403484 Comment 47. See http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/netwerk/streamconv/converters/nsIndexedToHTML.cpp&rev=1.88#828 It uses "…" and it is hard coded. I think it should be replaced as HTML escaped localized ellipsis. Reproducible: Always Steps to Reproduce: 1.Change intl.ellipsis in about:config. 2.Show directory list that contains file that has very long name. 3. Actual Results: Ellipsis is always U+2026. Expected Results: Ellipsis should be loczlized. Simple proposal: - escapedShort.AppendLiteral("…"); + AppendNonAsciiToNCR(nsContentUtils::GetLocalizedEllipsis(), escapedShort); # It may be needed to add including nsContentUtils.h
Version: unspecified → Trunk
Depends on: 403484
Assignee: nobody → smontagu
Severity: trivial → minor
Status: UNCONFIRMED → NEW
Component: File Handling → Internationalization
Ever confirmed: true
QA Contact: file-handling → i18n
Masahiro, would you be willing to take this bug and provide a real patch ? (reassign to yourself if so)
(In reply to comment #1) > Masahiro, would you be willing to take this bug and provide a real patch ? > > (reassign to yourself if so) > I'll write patch. But I found other bugs for same source file. I think one of them are more important. Patch for this bug conflicts to it.
I thought I can use nsContentUtils::GetLocalizedEllipsis() to get intl.ellipsis. But, [#include "nsContentUtils.h"] causes failure of compile. (complier failed to find 'nsContentUtils.h'). Which is better to modify makefile or to implement without nsContentUtils::GetLocalizedEllipsis() ?
Attached patch Patch rv.1.0 (obsolete) — Splinter Review
Whom souhld I request review ? And is it needed superreview and ui-review ?
Attachment #300848 - Flags: review?
Attachment #300848 - Flags: review? → review?(mano)
Yamada-san: FYI: you can find the reviewers for each modules from CVS log of LXR.
Comment on attachment 300848 [details] [diff] [review] Patch rv.1.0 I'm not a necko peer
Attachment #300848 - Flags: review?(mano)
Attachment #300848 - Flags: review?(bzbarsky)
Comment on attachment 300848 [details] [diff] [review] Patch rv.1.0 Make that mEscapedEllipsis, and looks ok. Thank you for fixing this!
Attachment #300848 - Flags: review?(bzbarsky) → review+
What are we waiting for here?
Is superreview and ui-review needed for attachment 300348 [details] ?
(In reply to comment #9) > Is superreview and ui-review needed for attachment 300348 [details] ? > Oops, it's attachment 300848 [details] [diff] [review].
No ui-review needed. Boris does superreviews, and he usually does it along with the review, so I guess it's kind of redundant.
(In reply to comment #7) > (From update of attachment 300848 [details] [diff] [review]) > Make that mEscapedEllipsis Masahiro, can you please make that change, attach a new patch and request approval1.9?
Assignee: smontagu → masa141421356
Attached patch Patch rev.1.1Splinter Review
renamed escapedEllipsis to mEscapedEllipsis
Attachment #300848 - Attachment is obsolete: true
Attachment #314547 - Flags: review+
Attachment #314547 - Flags: approval1.9?
Comment on attachment 314547 [details] [diff] [review] Patch rev.1.1 a1.9=beltzner
Attachment #314547 - Flags: approval1.9? → approval1.9+
Keywords: checkin-needed
checked-in, thank you for your work!
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
verified at Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9pre) Gecko/2008041005 Minefield/3.0pre
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: