Bug 411854 directory list should use localized ellipsis p=Masahiro Yamada<masa141421356@gmail.com> r=bzbarsky a1.9=beltzner